--- a/pom.xml
+++ b/pom.xml
@@ -8,26 +8,9 @@
     <artifactId>ee</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-<dependencies>
-    <dependency>
-        <groupId>javax</groupId>
-        <artifactId>javaee-api</artifactId>
-        <version>7.0</version>
-        <scope>provided</scope>
-    </dependency>
+    <packaging>pom</packaging>
 
-    <!-- CDI -->
-    <dependency>
-        <groupId>org.jboss.weld.se</groupId>
-        <artifactId>weld-se</artifactId>
-        <version>2.3.2.Final</version>
-    </dependency>
-
-    <!-- JPA -->
-    <dependency>
-        <groupId>org.eclipse.persistence</groupId>
-        <artifactId>org.eclipse.persistence.jpa</artifactId>
-        <version>2.6.2</version>
-    </dependency>
-</dependencies>
+    <modules>
+        <module>CDI</module>
+    </modules>
 </project>
