--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
         <module>XML-JSON</module>
         <module>JMS</module>
         <module>SOAP</module>
+        <module>SOAP_WS_Consumer</module>
     </modules>
 </project>
