example - Spring 4 MVC + JMS + ActiveMQ annotation based Example from http://websystique.com/springmvc/spring-4-mvc-jms-activemq-annotation-based-example/

--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,7 @@
         <module>SOAP</module>
         <module>SOAP_WS_Consumer</module>
         <module>REST</module>
+        <module>JMS2_SPRING/Spring4MVCJmsActiveMQExample</module>
+        <module>JMS2_SPRING/Spring4MVCJmsActiveMQOrderInventory</module>
     </modules>
 </project>
